services/ingress-with-ssl/03-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-server
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - test.dockerlabs.de
    secretName: quickstart-example-tls
  rules:
  - host: test.dockerlabs.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service-cp
            port:
              number: 80
